--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 <img src="icea.png" alt="ICEA Logo" class="button-icon-png">
                 <span>ICEA</span>
             </a>
-            <a href="../Kalkulator/Logo/SPLN.png" class="button button-spln">
+            <a href="spln.html" class="button button-spln">
                 <img src="spln.png" alt="SPLN Logo" class="button-icon-png">
                 <span>SPLN</span>
             </a>
