--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kalkulator Hambatan Konduktor</title>
+    <title>Kalkulator Hambatan Konduktor v10</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -299,7 +299,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Kalkulator Hambatan Konduktor v9</h1>
+        <h1>Kalkulator Hambatan Konduktor v10</h1>
         <hr> <div class="button-grid">
             <a href="iec.html" class="button button-iec">
                 <img src="iec.png" alt="IEC Logo" class="button-icon-png">
