--- a/spln.html
+++ b/spln.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Kalkulator Resistansi Konduktor SPLN v7</title>
+  <title>Kalkulator Resistansi Konduktor SPLN v7 full</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <style>
     :root {
@@ -348,7 +348,7 @@
 </head>
 <body>
   <div class="container-main">
-    <div class="title-main">Kalkulator Resistansi Konduktor SPLN v7</div>
+    <div class="title-main">Kalkulator Resistansi Konduktor SPLN v7 full</div>
     <div class="divider"></div>
 
     <div class="form-row">
